<resources>
    <string name="app_name">MyWeatherApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="icao_code">Enter ICAO Code</string>
    <string name="get_weather_info">Get Weather Information</string>
    <string name="weather_table">Weather Information</string>

    <string name="humidity_string">Humidity</string>
    <string name="temperature_string">Temperature</string>
    <string name="clouds_string">Clouds</string>
    <string name="condition_string">Weather Condition</string>
    <string name="datetime_string">Local Date &amp; Time</string>
    <string name="sunrise_string">Sunrise</string>
    <string name="sunset_string">Sunset</string>

</resources>