<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/resultOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:text="">
    </TextView>

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/imageno"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:scaleType="center"/>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="*"
        android:stretchColumns="true"
        android:gravity="center_horizontal">
        <TableRow
            android:layout_height="wrap_content"
            android:id="@+id/tableRow2"
            android:layout_width="match_parent">
            <TextView
                android:text="@string/temperature_string"
                android:id="@+id/textTemp"
                android:textStyle="bold"
                android:gravity="left"
                android:paddingLeft="@dimen/tablecell_horizontal_margin"
                android:paddingRight="@dimen/tablecell_horizontal_margin"
                android:paddingTop="@dimen/tablecell_vertical_margin"
                android:paddingBottom="@dimen/tablecell_vertical_margin">
            </TextView>
            <TextView
                android:id="@+id/textTempValue"
                android:text=""
                android:gravity="left"
                android:paddingLeft="@dimen/tablecell_horizontal_margin"
                android:paddingRight="@dimen/tablecell_horizontal_margin"
                android:paddingTop="@dimen/tablecell_vertical_margin"
                android:paddingBottom="@dimen/tablecell_vertical_margin">
            </TextView>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:id="@+id/tableRow3"
            android:layout_width="match_parent">
            <TextView
                android:text="@string/humidity_string"
                android:id="@+id/textHumidity"
                android:textStyle="bold"
                android:gravity="left"
                android:paddingLeft="@dimen/tablecell_horizontal_margin"
                android:paddingRight="@dimen/tablecell_horizontal_margin"
                android:paddingTop="@dimen/tablecell_vertical_margin"
                android:paddingBottom="@dimen/tablecell_vertical_margin">
            </TextView>
            <TextView
                android:text=""
                android:id="@+id/textHumidityValue"
                android:gravity="left"
                android:paddingLeft="@dimen/tablecell_horizontal_margin"
                android:paddingRight="@dimen/tablecell_horizontal_margin"
                android:paddingTop="@dimen/tablecell_vertical_margin"
                android:paddingBottom="@dimen/tablecell_vertical_margin">
            </TextView>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/textClouds"
                android:text="@string/clouds_string"
                android:textStyle="bold"
                android:gravity="left"
                android:paddingLeft="@dimen/tablecell_horizontal_margin"
                android:paddingRight="@dimen/tablecell_horizontal_margin"
                android:paddingTop="@dimen/tablecell_vertical_margin"
                android:paddingBottom="@dimen/tablecell_vertical_margin">
            </TextView>
            <TextView
                android:text=""
                android:id="@+id/textCloudsValue"
                android:gravity="left"
                android:paddingLeft="@dimen/tablecell_horizontal_margin"
                android:paddingRight="@dimen/tablecell_horizontal_margin"
                android:paddingTop="@dimen/tablecell_vertical_margin"
                android:paddingBottom="@dimen/tablecell_vertical_margin">
            </TextView>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/textCondition"
                android:text="@string/condition_string"
                android:textStyle="bold"
                android:gravity="left"
                android:paddingLeft="@dimen/tablecell_horizontal_margin"
                android:paddingRight="@dimen/tablecell_horizontal_margin"
                android:paddingTop="@dimen/tablecell_vertical_margin"
                android:paddingBottom="@dimen/tablecell_vertical_margin">
            </TextView>
            <TextView
                android:text=""
                android:id="@+id/textConditionValue"
                android:gravity="left"
                android:paddingLeft="@dimen/tablecell_horizontal_margin"
                android:paddingRight="@dimen/tablecell_horizontal_margin"
                android:paddingTop="@dimen/tablecell_vertical_margin"
                android:paddingBottom="@dimen/tablecell_vertical_margin">
            </TextView>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/textDateTime"
                android:text="@string/datetime_string"
                android:textStyle="bold"
                android:gravity="left"
                android:paddingLeft="@dimen/tablecell_horizontal_margin"
                android:paddingRight="@dimen/tablecell_horizontal_margin"
                android:paddingTop="@dimen/tablecell_vertical_margin"
                android:paddingBottom="@dimen/tablecell_vertical_margin">
            </TextView>
            <TextView
                android:text=""
                android:id="@+id/textDateTimeValue"
                android:gravity="left"
                android:paddingLeft="@dimen/tablecell_horizontal_margin"
                android:paddingRight="@dimen/tablecell_horizontal_margin"
                android:paddingTop="@dimen/tablecell_vertical_margin"
                android:paddingBottom="@dimen/tablecell_vertical_margin">
            </TextView>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow7"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/textSunrise"
                android:text="@string/sunrise_string"
                android:textStyle="bold"
                android:gravity="left"
                android:paddingLeft="@dimen/tablecell_horizontal_margin"
                android:paddingRight="@dimen/tablecell_horizontal_margin"
                android:paddingTop="@dimen/tablecell_vertical_margin"
                android:paddingBottom="@dimen/tablecell_vertical_margin">
            </TextView>
            <TextView
                android:text=""
                android:id="@+id/textSunriseValue"
                android:gravity="left"
                android:paddingLeft="@dimen/tablecell_horizontal_margin"
                android:paddingRight="@dimen/tablecell_horizontal_margin"
                android:paddingTop="@dimen/tablecell_vertical_margin"
                android:paddingBottom="@dimen/tablecell_vertical_margin">
            </TextView>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow8"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/textSunset"
                android:text="@string/sunset_string"
                android:textStyle="bold"
                android:gravity="left"
                android:paddingLeft="@dimen/tablecell_horizontal_margin"
                android:paddingRight="@dimen/tablecell_horizontal_margin"
                android:paddingTop="@dimen/tablecell_vertical_margin"
                android:paddingBottom="@dimen/tablecell_vertical_margin">
            </TextView>
            <TextView
                android:text=""
                android:id="@+id/textSunsetValue"
                android:gravity="left"
                android:paddingLeft="@dimen/tablecell_horizontal_margin"
                android:paddingRight="@dimen/tablecell_horizontal_margin"
                android:paddingTop="@dimen/tablecell_vertical_margin"
                android:paddingBottom="@dimen/tablecell_vertical_margin">
            </TextView>
        </TableRow>
    </TableLayout>

</LinearLayout>
